@@ -1,4 +1,4 @@
-.\" RCSid "$Id: vwrays.1,v 1.11 2019/11/07 23:20:28 greg Exp $"
+.\" RCSid "$Id: vwrays.1,v 1.12 2021/12/04 16:29:29 greg Exp $"
 .TH VWRAYS 1 1/15/99 RADIANCE
 .SH NAME
 vwrays - compute rays for a given picture or view
@@ -47,7 +47,9 @@ with the same
 setting, providing a much faster way to average pixels over image sets.
 The
 .I \-pj
-option should be used to jitter sample postions in most cases.
+and/or
+.I \-pd
+options should be used to jitter sample postions in most cases.
 .PP
 View options may be any combination of standard view parameters described
 in the
@@ -70,7 +72,10 @@ aspect ratio, unless this ratio is set to zero.
 The
 .I \-pj
 option may be used to jitter samples.
-The default value of 0 turns off ray jittering.
+The
+.I \-pd
+option specifies a world-diameter aperture for depth-of-field jittering.
+The default value of 0 for both options turns off all ray jittering.
 .PP
 If the
 .I \-d
